k8s/policies/validate-task-request-namespace/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8svalidatetaskrequestnamespace
spec:
  crd:
    spec:
      names:
        kind: K8sValidateTaskRequestNamespace
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedNamespaces:
              type: array
              minItems: 1
              maxItems: 32
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8svalidatetaskrequestnamespace

        requested_ns := object.get(input.review.object.metadata, "namespace", "")
        allowed_ns := input.parameters.allowedNamespaces

        is_namespace_allowed(namespace) {
          some i
          allowed_ns[i] == namespace
        }

        # ---------------------------------------------------------------------
        # Violation: TaskRequest is being created in a namespace that is not 
        # allowed
        # ---------------------------------------------------------------------
        violation[{"msg": msg}] {
          not is_namespace_allowed(requested_ns)

          msg := sprintf("TaskRequest cannot be created in namespace '%v'", [requested_ns])
        }
