k8s/policies/validate-task-request-namespace/tests/bad.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: bad
spec:
  issuer: issuer
  datasets: [d]
