k8s/policies/validate-task-request-namespace/tests/ok.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: ok
  namespace: compute
spec:
  issuer: issuer
  datasets: [d]
